<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>app</artifactId>
  <packaging>pom</packaging>
  <parent>
    <groupId>org.phoebus</groupId>
    <artifactId>parent</artifactId>
    <version>4.7.4-SNAPSHOT</version>
  </parent>
  <modules>
    <module>diag</module>
    <module>log-configuration</module>
    <module>probe</module>
    <module>pvtable</module>
    <module>pvtree</module>
    <module>update</module>
    <module>email</module>
    <module>errlog</module>
    <module>filebrowser</module>
    <module>logbook</module>
    <module>rtplot</module>
    <module>databrowser</module>
    <module>databrowser-json</module>
    <module>databrowser-timescale</module>
    <module>display</module>
    <module>alarm</module>
    <module>scan</module>
    <module>channel</module>
    <module>3d-viewer</module>
    <module>perfmon</module>
    <module>pace</module>
    <module>save-and-restore</module>
    <module>console</module>
    <module>trends</module>
    <module>utility</module>
    <module>imageviewer</module>
    <module>credentials-management</module>
    <module>eslog</module>
  </modules>
  <profiles>
    <profile>
      <id>aspects</id>
      <dependencies>
        <dependency>
          <groupId>org.aspectj</groupId>
          <artifactId>aspectjtools</artifactId>
          <version>${aspectj.version}</version>
        </dependency>
        <dependency>
          <groupId>org.aspectj</groupId>
          <artifactId>aspectjrt</artifactId>
          <version>${aspectj.version}</version>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>org.phoebus</groupId>
          <artifactId>aspects</artifactId>
          <version>4.7.4-SNAPSHOT</version>
        </dependency>
      </dependencies>

      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>aspectj-maven-plugin</artifactId>
            <version>1.15.0</version>
            <configuration>
              <showWeaveInfo>true</showWeaveInfo>
              <source>17</source>
              <target>17</target>
              <complianceLevel>17</complianceLevel>
              <encoding>UTF-8</encoding>
              <verbose>true</verbose>
              <aspectLibraries>
                <aspectLibrary>
                  <groupId>org.phoebus</groupId>
                  <artifactId>aspects</artifactId>
                </aspectLibrary>
              </aspectLibraries>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>compile</goal>
                </goals>
              </execution>
            </executions>
            <dependencies>
              <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjtools</artifactId>
                <version>${aspectj.version}</version>
              </dependency>
            </dependencies>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
